--- a/src/index.css
+++ b/src/index.css
@@ -1,86 +1,140 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  font-family: 'roboto';
+  line-height: 60px;
+  text-align: center;
+  color: white;
+
+}
+
+hr {
+  border: 0;
+  border-top: 1px solid #bbb;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+}
+
+.items-selected {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.List-items-selected {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-auto-rows: 60px;
+  grid-gap: 16px;
+}
+
+.List-items-selected__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+
+  border-radius: 10px;
+}
+
+.Items-selected__item > span:not(:last-child) {
+  margin-right: 10px;
+}
+
 .List {
-    margin: 16px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-auto-rows: 60px;
-    grid-gap: 16px;
-  }
-  
-  .List__item {
-    line-height: 60px;
-    text-align: center;
-    color: white;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.05);
-  }
-  
-  .List__item--selected {
-    border: 2px solid black;
-  }
-  
-  /* Taken from https://clrs.cc/ */
-  
-  .List__item--navy {
-    background-color: #001f3f;
-  }
-  
-  .List__item--blue {
-    background-color: #0074d9;
-  }
-  
-  .List__item--aqua {
-    background-color: #7fdbff;
-  }
-  
-  .List__item--teal {
-    background-color: #39cccc;
-  }
-  
-  .List__item--olive {
-    background-color: #3d9970;
-  }
-  
-  .List__item--green {
-    background-color: #2ecc40;
-  }
-  
-  .List__item--lime {
-    background-color: #01ff70;
-  }
-  
-  .List__item--yellow {
-    background-color: #ffdc00;
-  }
-  
-  .List__item--orange {
-    background-color: #ff851b;
-  }
-  
-  .List__item--red {
-    background-color: #ff4136;
-  }
-  
-  .List__item--maroon {
-    background-color: #85144b;
-  }
-  
-  .List__item--fuchsia {
-    background-color: #f012be;
-  }
-  
-  .List__item--purple {
-    background-color: #b10dc9;
-  }
-  
-  .List__item--black {
-    background-color: #111111;
-  }
-  
-  .List__item--gray {
-    background-color: #aaaaaa;
-  }
-  
-  .List__item--silver {
-    background-color: #dddddd;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-auto-rows: 60px;
+  grid-gap: 16px;
+  margin-top: 20px;
+}
+
+.List__item {
+
+  list-style-type: none;
+
+  border-radius: 10px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+  transition: all ease 0.5s;
+}
+
+.List__item--selected {
+  transform: translateY(-10px);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.35);
+}
+
+/* Taken from https://clrs.cc/ */
+
+.List__item--navy {
+  background-color: #001f3f;
+}
+
+.List__item--blue {
+  background-color: #0074d9;
+}
+
+.List__item--aqua {
+  background-color: #7fdbff;
+}
+
+.List__item--teal {
+  background-color: #39cccc;
+}
+
+.List__item--olive {
+  background-color: #3d9970;
+}
+
+.List__item--green {
+  background-color: #2ecc40;
+}
+
+.List__item--lime {
+  background-color: #01ff70;
+}
+
+.List__item--yellow {
+  background-color: #ffdc00;
+}
+
+.List__item--orange {
+  background-color: #ff851b;
+}
+
+.List__item--red {
+  background-color: #ff4136;
+}
+
+.List__item--maroon {
+  background-color: #85144b;
+}
+
+.List__item--fuchsia {
+  background-color: #f012be;
+}
+
+.List__item--purple {
+  background-color: #b10dc9;
+}
+
+.List__item--black {
+  background-color: #111111;
+}
+
+.List__item--gray {
+  background-color: #aaaaaa;
+}
+
+.List__item--silver {
+  background-color: #dddddd;
+}
