--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,13 @@ ul {
 
 li {
   font-family: 'roboto';
-  line-height: 60px;
   text-align: center;
   color: white;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 4px;
+  max-width: 180px;
 }
 
 hr {
